# simple_pose_estimation

./: .gitignore  CMakeLists.txt  README.md
src/: simple_pose_estimator.cpp  simple_pose_estimator.h
